refactor: split button style updates

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -364,8 +364,9 @@
                                     <mona-tooltip [target]="testButtonRef" position="bottom">
                                         <!--                                        <span style="font-weight: bold; font-size: 24px;">Test Button Tooltip</span>-->
                                         <img
-                                            src="https://photos.smugmug.com/Shared/Image/i-WG27Dmp/0/38cbf7f2/4K/colorful-liquid-flow-abstract-digital-art-uhdpaper.com-4K-8.1392-4K.jpg"
-                                            style="width: 480px; height: 270px;" alt="Tooltip Image"/>
+                                            ngSrc="https://photos.smugmug.com/photos/i-RjvHXNW/0/FMvsc5NMvkcgv4RQ76HqqrXkWHK36BshdjTpzTXbw/S/i-RjvHXNW-S.png"
+                                            [width]="205" [height]="300" priority
+                                            alt="Tooltip Image"/>
                                     </mona-tooltip>
                                 </button>
 
