--- a/projects/mona-ui/src/lib/date-inputs/calendar/calendar.component.scss
+++ b/projects/mona-ui/src/lib/date-inputs/calendar/calendar.component.scss
@@ -1,4 +1,4 @@
-table.mona-calendar-month-view-table {
+.mona-calendar-month-view-table {
     width: 100%;
     border-collapse: collapse;
     & td, th {
@@ -37,7 +37,7 @@ table.mona-calendar-month-view-table {
     }
 }
 
-table.mona-calendar-year-view-table {
+.mona-calendar-year-view-table {
     width: 100%;
     border-collapse: collapse;
     & td, th {
@@ -48,7 +48,7 @@ table.mona-calendar-year-view-table {
     }
 }
 
-table.mona-calendar-decade-view-table {
+.mona-calendar-decade-view-table {
     width: 100%;
     border-collapse: collapse;
     & td, th {
@@ -59,7 +59,7 @@ table.mona-calendar-decade-view-table {
     }
 }
 
-div.mona-calendar-header {
+.mona-calendar-header {
     display: flex;
     & > div:first-child, & > div:last-child {
         display: flex;
@@ -92,9 +92,9 @@ div.mona-calendar-header {
     }
 }
 
-div.mona-calendar-month-view,
-div.mona-calendar-year-view,
-div.mona-calendar-decade-view {
+.mona-calendar-month-view,
+.mona-calendar-year-view,
+.mona-calendar-decade-view {
     border-left: 1px solid var(--mona-border-color);
     border-right: 1px solid var(--mona-border-color);
     border-bottom: 1px solid var(--mona-border-color);
