--- a/projects/mona-ui/src/lib/date-inputs/date-time-picker/date-time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/date-time-picker/date-time-picker.component.html
@@ -1,19 +1,17 @@
-<div class="mona-date-time-picker" #popupAnchor>
-    <input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly"
-           [ngModel]="currentDateString()"
-           (ngModelChange)="onDateStringEdit($event)" (blur)="onDateInputBlur()">
-    <button monaButton class="mona-input-button" (click)="onDateInputButtonClick()"
-            [disabled]="disabled" [tabindex]="-1">
-        <fa-icon [icon]="dateIcon"></fa-icon>
-    </button>
-    <button monaButton class="mona-input-button" (click)="onTimeInputButtonClick()"
-            [disabled]="disabled" [tabindex]="-1">
-        <fa-icon [icon]="timeIcon"></fa-icon>
-    </button>
-</div>
+<input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly()"
+       [ngModel]="currentDateString()"
+       (ngModelChange)="onDateStringEdit($event)" (blur)="onDateInputBlur()">
+<button monaButton class="mona-input-button" (click)="onDateInputButtonClick()"
+        [disabled]="disabled" [tabindex]="-1">
+    <fa-icon [icon]="dateIcon"></fa-icon>
+</button>
+<button monaButton class="mona-input-button" (click)="onTimeInputButtonClick()"
+        [disabled]="disabled" [tabindex]="-1">
+    <fa-icon [icon]="timeIcon"></fa-icon>
+</button>
 
 <ng-template #datePopupTemplate>
-    <mona-calendar [disabledDates]="disabledDates" [min]="minDate()" [max]="maxDate()"
+    <mona-calendar [disabledDates]="disabledDates()" [min]="min()" [max]="max()"
                    [ngModel]="navigatedDate()"
                    (ngModelChange)="onCalendarValueChange($event)"></mona-calendar>
 </ng-template>
@@ -21,5 +19,5 @@
 <ng-template #timePopupTemplate>
     <mona-time-selector [ngModel]="navigatedDate()" (ngModelChange)="onTimeSelectorValueChange($event)"
                         [max]="timePickerMax()" [min]="timePickerMin()"
-                        [hourFormat]="hourFormat" [showSeconds]="showSeconds"></mona-time-selector>
+                        [hourFormat]="hourFormat()" [showSeconds]="showSeconds()"></mona-time-selector>
 </ng-template>
