--- a/projects/mona-ui/src/lib/date-inputs/time-picker/time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/time-picker/time-picker.component.html
@@ -1,15 +1,13 @@
-<div class="mona-time-picker" #popupAnchor>
-    <input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly"
-           [ngModel]="currentDateString()"
-           (ngModelChange)="onDateStringEdit($event)" (blur)="onTimeInputBlur()">
-    <button monaButton class="mona-input-button" (click)="onTimeInputButtonClick()"
-            [disabled]="disabled" [tabindex]="-1">
-        <fa-icon [icon]="timeIcon"></fa-icon>
-    </button>
-</div>
+<input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly()"
+       [ngModel]="currentDateString()"
+       (ngModelChange)="onDateStringEdit($event)" (blur)="onTimeInputBlur()">
+<button monaButton class="mona-input-button" (click)="onTimeInputButtonClick()"
+        [disabled]="disabled" [tabindex]="-1">
+    <fa-icon [icon]="timeIcon"></fa-icon>
+</button>
 
 <ng-template #timePopupTemplate>
     <mona-time-selector [ngModel]="value()" (ngModelChange)="onTimeSelectorValueChange($event)"
-                        [max]="maxDate()" [min]="minDate()"
-                        [hourFormat]="hourFormat" [showSeconds]="showSeconds"></mona-time-selector>
+                        [max]="max()" [min]="min()" [readonly]="readonly()" [disabled]="disabled"
+                        [hourFormat]="hourFormat()" [showSeconds]="showSeconds()"></mona-time-selector>
 </ng-template>
