--- a/projects/mona-ui/src/lib/date-inputs/time-selector/time-selector.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/time-selector/time-selector.component.html
@@ -1,27 +1,29 @@
-<div class="mona-time-selector" [ngClass]="{'mona-disabled': disabled}">
-    <ol #hoursListElement>
-        @for (h of hours|hourSelector:hourFormat:meridiem|timeLimiter:'h':navigatedDate():minDate():maxDate(); track h) {
-            <li [ngClass]="{'mona-selected':h.viewValue===hour()}"
-                (click)="onHourChange(h.value)"
-                [attr.data-value]="h.value">{{h.viewValue | number:'2.0'}}
-            </li>
-        }
-    </ol>
-    <ol #minutesListElement>
-        @for (m of minutes|timeLimiter:'m':navigatedDate():minDate():maxDate(); track m) {
-            <li [ngClass]="{'mona-selected':m.value===minute()}"
-                (click)="onMinuteChange(m.value)" [attr.data-value]="m.value">{{m.viewValue | number:'2.0'}}
-            </li>
-        }
-    </ol>
-    <ol #secondsListElement *ngIf="showSeconds">
-        @for (s of seconds|timeLimiter:'s':navigatedDate():minDate():maxDate(); track s) {
+<ol #hoursListElement>
+    @for (h of hours|hourSelector:hourFormat():meridiem|timeLimiter:'h':navigatedDate():min():max(); track h) {
+        <li [ngClass]="{'mona-selected':h.viewValue===hour()}"
+            (click)="onHourChange(h.value)"
+            [attr.data-value]="h.value">{{h.viewValue | number:'2.0'}}
+        </li>
+    }
+</ol>
+<ol #minutesListElement>
+    @for (m of minutes|timeLimiter:'m':navigatedDate():min():max(); track m) {
+        <li [ngClass]="{'mona-selected':m.value===minute()}"
+            (click)="onMinuteChange(m.value)" [attr.data-value]="m.value">{{m.viewValue | number:'2.0'}}
+        </li>
+    }
+</ol>
+@if (showSeconds()) {
+    <ol #secondsListElement>
+        @for (s of seconds|timeLimiter:'s':navigatedDate():min():max(); track s) {
             <li [ngClass]="{'mona-selected':s.value===second()}"
                 (click)="onSecondChange(s.value)" [attr.data-value]="s.value">{{s.value | number:'2.0'}}
             </li>
         }
     </ol>
-    <ol *ngIf="hourFormat==='12'">
+}
+@if (hourFormat()==='12') {
+    <ol>
         @if (amMeridiemVisible()) {
             <li [ngClass]="{'mona-selected': meridiem==='AM'}"
                 (click)="onMeridiemClick('AM')">AM</li>
@@ -30,4 +32,4 @@
                 (click)="onMeridiemClick('PM')">PM</li>
         }
     </ol>
-</div>
+}
