--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -548,7 +548,7 @@ ul.mona-list mona-text-box.filter-box {
     }
 }
 
-table.mona-calendar-month-view-table {
+.mona-calendar-month-view-table {
     & thead {
         @include font-small;
     }
@@ -593,7 +593,11 @@ table.mona-calendar-month-view-table {
 }
 
 /** Time Selector */
-div.mona-time-selector {
+.mona-time-selector {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     & mona-button-group {
         & button {
             padding: 0 8px;
@@ -619,7 +623,7 @@ div.mona-time-selector {
     }
 }
 
-div.mona-time-picker-popup {
+.mona-time-picker-popup {
     padding: 0 !important;
     overflow: hidden;
 }
