--- a/projects/mona-ui/src/lib/dropdowns/auto-complete/components/auto-complete.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/auto-complete/components/auto-complete.component.html
@@ -1,15 +1,14 @@
-<div class="mona-auto-complete" #dropdownWrapper>
-    <input monaTextBox class="mona-input-inner"
-           [disabled]="disabled"
-           [ngModel]="autoCompleteValue()"
-           (ngModelChange)="autoCompleteValue$.next($event)"
-           (keydown)="onKeydown($event)">
-    @if (showClearButton && autoCompleteValue()) {
-        <span class="mona-input-clear-icon" (click)="clearValue($event)">
-            <fa-icon [icon]="clearIcon"></fa-icon>
-        </span>
-    }
-</div>
+<input monaTextBox class="mona-input-inner"
+       [disabled]="disabled"
+       [placeholder]="placeholder()"
+       [ngModel]="autoCompleteValue()"
+       (ngModelChange)="autoCompleteValue$.next($event)"
+       (keydown)="onKeydown($event)">
+@if (showClearButton() && autoCompleteValue()) {
+    <span class="mona-input-clear-icon" (click)="clearValue($event)">
+        <fa-icon [icon]="clearIcon"></fa-icon>
+    </span>
+}
 
 <ng-template #popupTemplate>
     <div class="mona-dropdown-popup-list-wrapper">
