refactor: dropdown tree style updates

--- a/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.scss
@@ -1,10 +1,4 @@
-.mona-dropdown-tree {
-    display: inherit;
-    width: 100%;
-    outline: none;
-}
-
-div.mona-dropdown-value {
+.mona-dropdown-value {
     display: flex;
     align-items: center;
     width: 100%;
